tests/parse_errors/wrong_frame.src
.IPPcode18
DEFVAR gF@test 